--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
-.col-lg-6 {
+.container {
+  text-align: center;
+}
+
+.col-lg-5 {
   border: solid 1px;
+  border-radius: 100%;
+}
+
+.player1 {
+  background-color: red;
+  }
+
+.player2 {
+  background-color: blue;
+  /* display: none; */
+}
+
+.buttons {
+  text-align: left;
+  transition:all 1s;
+}
+
+.buttons2 {
+  text-align: right;
+  transition:all 1s;
 }
